Improve documentation.